--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ VITE_AUTHOR_LOGO_LIGHT="https://res.cloudinary.com/boxity-id/image/upload/v16787
 VITE_AUTHOR_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v1678791550/asset_boxity/logo/Asset_36_i0dcvz.png"
 VITE_CLIENTS_NAME="PT TEKNOLOGI NAYA ABADI"
 VITE_PUBLIC_URL="https://erp-fe-uat.octansidn.com"
+VITE_BEARER_TOKEN="51|ODwHsYHeKiwecT78TyaTc2s4xuK5jMYaEo8Nnbga71bdc9a5"
