fix: logo and a lil bit of changes

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,9 @@ VITE_AUTHOR_RESERVED="PT. Boxity Central Indonesia"
 VITE_AUTHOR_LINK="https://boxity.id"
 VITE_AUTHOR_LOGO_LIGHT="https://res.cloudinary.com/boxity-id/image/upload/v1678791965/asset_boxity/logo/logo_primary_um5cgb.png"
 VITE_AUTHOR_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v1678791550/asset_boxity/logo/Asset_36_i0dcvz.png"
-VITE_CLIENTS_NAME="PT TEKNOLOGI NAYA ABADI"
+VITE_CLIENT_LOGO_LIGHT="https://res.cloudinary.com/boxity-id/image/upload/v1713275746/ptDHKManufacturing/logo-long_qepphg.png"
+VITE_CLIENT_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v1713275746/ptDHKManufacturing/logo-long_qepphg.png"
+VITE_CLIENTS_ICON="https://res.cloudinary.com/boxity-id/image/upload/v1713274875/ptDHKManufacturing/icon_taauqv.png"
+VITE_CLIENTS_NAME="PT DHK Jaya Manufacturing"
 VITE_PUBLIC_URL="http://localhost:5173/"
-VITE_BEARER_TOKEN="52|jjhSqhguXeopXwTNd6pZl0ALSAb41bedXCWTPSZybab4589b"
+VITE_BEARER_TOKEN="60|WLLrliWUqYOIKYOAoeYpim9DGY4wRVH82r5WtONlb40c7274"
