--- a/.env.production
+++ b/.env.production
@@ -8,4 +8,4 @@ VITE_CLIENT_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v171327
 VITE_CLIENTS_ICON="https://res.cloudinary.com/boxity-id/image/upload/v1713274875/ptDHKManufacturing/icon_taauqv.png"
 VITE_CLIENTS_NAME="PT DHK Jaya Manufacturing"
 VITE_PUBLIC_URL="https://erp-fe-uat.octansidn.com"
-VITE_BEARER_TOKEN="2|MmcBNvh2UzRUeIOE9QOPoB6cL8cou9WJjVI9Bc0F5ad3480f"
+VITE_SESSION_URL=".octansidn.com"
