--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.8",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
+    "lodash.template": "^4.5.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
-    "sweetalert2": "^11.10.7",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
