update: env author reserved

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_API_URL=https://beta-api-boxity.octansidn.com/api/
-VITE_AUTHOR_RESERVED="PT. Boxity Central Indonesia"
+VITE_AUTHOR_RESERVED="PT. TNA Manufacturing"
 VITE_AUTHOR_LINK="https://boxity.id"
 VITE_AUTHOR_LOGO_LIGHT="https://res.cloudinary.com/boxity-id/image/upload/v1678791965/asset_boxity/logo/logo_primary_um5cgb.png"
 VITE_AUTHOR_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v1678791550/asset_boxity/logo/Asset_36_i0dcvz.png"
