--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
+    "serialport": "^12.0.0",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^3.4.3"
   },
