fix url websocket

--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,4 @@ VITE_CLIENTS_ICON="https://res.cloudinary.com/boxity-id/image/upload/v1713274875
 VITE_CLIENTS_NAME="PT DHK Jaya Manufacturing"
 VITE_PUBLIC_URL="http://localhost:5173/"
 VITE_SESSION_URL="localhost"
+VITE_WEBSOCKET_URL="ws://localhost:3000/"
