--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ VITE_CLIENTS_ICON="https://res.cloudinary.com/boxity-id/image/upload/v1713274875
 VITE_CLIENTS_NAME="PT DHK Jaya Manufacturing"
 VITE_PUBLIC_URL="https://erp-fe-uat.octansidn.com"
 VITE_SESSION_URL=".octansidn.com"
+VITE_WEBSOCKET_URL="ws://89.116.121.153:3000/"
