fix env for vps production

--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,6 @@ VITE_CLIENT_LOGO_LIGHT="https://res.cloudinary.com/boxity-id/image/upload/v17132
 VITE_CLIENT_LOGO_DARK="https://res.cloudinary.com/boxity-id/image/upload/v1713275746/ptDHKManufacturing/logo-long_qepphg.png"
 VITE_CLIENTS_ICON="https://res.cloudinary.com/boxity-id/image/upload/v1713274875/ptDHKManufacturing/icon_taauqv.png"
 VITE_CLIENTS_NAME="PT DHK Jaya Manufacturing"
-VITE_PUBLIC_URL="https://erp-fe-uat.octansidn.com"
-VITE_SESSION_URL=".octansidn.com"
+VITE_PUBLIC_URL="http://erp-weight.dhk.co.id/"
+VITE_SESSION_URL=".dhk.co.id"
 VITE_WEBSOCKET_URL="ws://89.116.121.153:3000/"
